--- a/Frontend/.vscode/tasks.json
+++ b/Frontend/.vscode/tasks.json
@@ -15,6 +15,19 @@
 				"$tsc"
 			],
 			"group": "build"
+		},
+		{
+			"label": "Typecheck Frontend",
+			"type": "shell",
+			"command": "npx tsc -p . --noEmit",
+			"problemMatcher": [
+				"$tsc"
+			]
+		},
+		{
+			"label": "Typecheck Frontend",
+			"type": "shell",
+			"command": "npx tsc -p . --noEmit"
 		}
 	]
 }
