--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
+    "gsap": "^3.13.0",
     "pdfkit": "^0.17.2"
   },
   "devDependencies": {
