--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.6",
+    "pdfkit": "^0.17.2",
     "razorpay": "^2.9.6"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^20.11.30",
     "@types/nodemailer": "^7.0.1",
+    "@types/pdfkit": "^0.17.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   }
