--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,8 +16,10 @@
     "@react-three/fiber": "^9.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotted-map": "^2.2.3",
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.24",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
