--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,7 +27,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0",
-    "three-globe": "^2.44.1"
+    "three-globe": "^2.44.1",
+    "@barba/core": "^2.9.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
