--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@barba/core": "^2.9.7",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
@@ -27,8 +28,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0",
-    "three-globe": "^2.44.1",
-    "@barba/core": "^2.9.7"
+    "three-globe": "^2.44.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -38,6 +38,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "sharp": "^0.33.5",
+    "svgo": "^4.0.0",
+    "svgson": "^5.3.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
