--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,10 +19,10 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.24",
-    "next": "15.5.3",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
@@ -36,7 +36,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "eslint-config-next": "^16.1.6",
     "sharp": "^0.33.5",
     "svgo": "^4.0.0",
     "svgson": "^5.3.1",
