fix: remove unnecessary types configuration from tsconfig.json

--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -8,8 +8,7 @@
     "skipLibCheck": true,
     "strict": true,
     "outDir": "dist",
-    "rootDir": "src",
-    "types": ["node", "nodemailer"]
+    "rootDir": "src"
   },
   "include": ["src/**/*"]
 }
