--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc -p .",
+    "render-build": "npm ci --include=dev && npm run build",
     "start": "node dist/server.js"
   },
   "dependencies": {
